plugins {
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id 'com.diffplug.spotless' version '8.1.0'
}

group = 'ind.shubhamn'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'com.h2database:h2'
}

test {
	useJUnitPlatform()
}

spotless {
	java {
		target 'src/**/*.java'
		// Use google-java-format with specific version for consistency
		googleJavaFormat('1.33.0').aosp().reflowLongStrings()
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
		// Add license header if needed
		// licenseHeaderFile 'spotless.license.java'
	}
}

// Automatically format code before compiling
tasks.named('compileJava') {
	dependsOn 'spotlessApply'
}

tasks.named('compileTestJava') {
	dependsOn 'spotlessApply'
}

// Add a task to check formatting without applying
tasks.register('formatCheck') {
	dependsOn 'spotlessCheck'
	group = 'verification'
	description = 'Checks that source code satisfies formatting rules'
}

// Add a task to apply formatting
tasks.register('format') {
	dependsOn 'spotlessApply'
	group = 'formatting'
	description = 'Applies code formatting rules to source code'
}
